# MCP-Vision-Server

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/mcp_vision_server/: __init__.py  server.py
